infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: blogjpj.dev
      http:
        paths:
          # - path: /api/users/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: auth-srv
          #       port:
          #         number: 5001
          # - path: /api/tickets/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: tickets-srv
          #       port:
          #         number: 5001
          # - path: /api/orders/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: orders-srv
          #       port:
          #         number: 5001
          # - path: /api/payments/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: payments-srv
          #       port:
          #         number: 5001
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: blogclient-srv
                port:
                  number: 3000
